Finalized reviews and updated api docs JKT-47
