# docs/api.yaml
@@ -319,6 +319,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/definitions/TourRoutePoint'
+              latest_reviews:
+                description: The last 5 reviews for that tour that contain a review comment.
+                type: array
+                items:
+                  $ref: '#/definitions/Review'
         400:
           $ref: '#/responses/NoToken'
         401:
@@ -338,6 +343,12 @@ paths:
       produces:
         - application/json
       parameters:
+        - in: path
+          name: user_id
+          description: ID of the User
+          required: true
+          type: integer
+          format: int64
         - $ref: '#/parameters/AuthToken'
       security:
         - Bearer: []
@@ -390,6 +401,124 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Profile'
+        422:
+          $ref: '#/responses/ValidationError'
+        400:
+          $ref: '#/responses/NoToken'
+        401:
+          $ref: '#/responses/Unauthroized'
+        500:
+          $ref: '#/responses/UnexpectedError'
+
+  /reviews/{tour_id}:
+    get:
+      tags:
+        - reviews
+      summary: Review (list)
+      description: A paginated list of the given Tour's reviews, sorted by most recent.
+      operationId: listReview
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: tour_id
+          description: ID of the desired Tour
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              data:
+                description: Array of Reviews.
+                type: array
+                items:
+                  $ref: '#/definitions/Review'
+              links:
+                description: Pagination links
+                $ref: '#/definitions/PaginationLinks'
+              meta:
+                description: Pagination meta
+                $ref: '#/definitions/PaginationMeta'
+        400:
+          $ref: '#/responses/NoToken'
+        401:
+          $ref: '#/responses/Unauthroized'
+        500:
+          $ref: '#/responses/UnexpectedError'
+    post:
+      tags:
+        - reviews
+      summary: Review (create/update)
+      description: Submit a rating or review for the given Tour.  If the user has previous submitted a rating or review, it will updated to the new values.
+      operationId: createReview
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: tour_id
+          description: ID of the desired Tour
+          required: true
+          type: integer
+          format: int64
+        - in: body
+          name: rating
+          required: true
+          description: The rating value of the review.  This is based on a 5 star rating system, but uses whole numbers instead of decimals.  For example 25 = 2.5 stars.
+          schema:
+            required:
+              - rating
+            properties:
+              rating:
+                type: integer
+                format: int32
+                description: The rating value of the review.  This is based on a 5 star rating system, but uses whole numbers instead of decimals.  For example 25 = 2.5 stars.
+                example: 25
+                minimum: 0
+                maximum: 50
+              review:
+                type: string
+                example: Great tour!  We had a nice time.
+                description: A short text review of the Tour 
+                maximum: 255
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/Review'
+        422:
+          $ref: '#/responses/ValidationError'
+        400:
+          $ref: '#/responses/NoToken'
+        401:
+          $ref: '#/responses/Unauthroized'
+        500:
+          $ref: '#/responses/UnexpectedError'
+    delete:
+      tags:
+        - reviews
+      summary: Review (delete)
+      description: Delete the current user's review for the given Tour.
+      operationId: deleteReview
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: tour_id
+          description: ID of the desired Tour
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: OK
         422:
           $ref: '#/responses/ValidationError'
         400:
@@ -483,7 +612,7 @@ definitions:
       avatar_url:
         type: string
         description: |
-        The URL for the user's avatar image.  This is just generating a Gravatar URL.  Read more here: https://en.gravatar.com/site/implement/
+          The URL for the user's avatar image.  This is just generating a Gravatar URL.  Read more here: https://en.gravatar.com/site/implement/
         example: 'https://www.gravatar.com/avatar/387ec13e14f96854ed64aca99a477c70?s=2048&d=identicon&rating=g'
       email:
         type: string
@@ -543,6 +672,7 @@ definitions:
       - title
       - pricing_type
       - type
+      - rating
     properties:
       id:
         type: integer
@@ -674,6 +804,15 @@ definitions:
         type: string
         description: Background audio MP3 path.
         example: http://media.wejunket.com/images/4fd1b212d98168645c0dce52bdb05189.mp3
+      rating:
+        type: integer
+        format: int32
+        default: 0
+        minimum: 0
+        maximum: 50
+        description: |
+          The rating value of the review.  This is based on a 5 star rating system, but uses whole numbers instead of decimals.  For example 25 = 2.5 stars
+        example: 25
       created_at:
         type: string
         format: date-time
@@ -953,4 +1092,55 @@ definitions:
         format: int32
         description: The total number of records.
         example: 1481
-      
+        
+  Review:
+    type: object
+    required:
+      - id
+      - rating
+      - user_id
+      - tour_id
+      - created_at
+      - user
+    properties:
+      id:
+        type: integer
+        format: int32
+        description: The ID of the Review.
+        example: 52
+      rating:
+        type: integer
+        format: int32
+        default: 0
+        minimum: 0
+        maximum: 50
+        description: |
+          The rating value of the review.  This is based on a 5 star rating system, but uses whole numbers instead of decimals.  For example 25 = 2.5 stars
+        example: 25
+      review: 
+        type: string
+        maximum: 255
+        description: A short text review of the Tour.
+        example: This was a great Tour, and free too!
+      user_id: 
+        type: integer
+        format: int32
+        description: The creating user's invalid.
+        example: 10009
+      tour_id:
+        type: integer
+        format: int32
+        description: The Tour related to the review.
+        example: 90303
+      created_at:
+        type: string
+        format: date-time
+        description: Timestamp of when the review was created.
+        example: '2018-07-21 13:53:20'
+      updated_at:
+        type: string
+        format: date-time
+        description: Timestamp of when the review was last updated.
+        example: '2018-07-21 13:53:20'
+      user:
+        $ref: '#/definitions/User'
