# routes/mobile.php
@@ -34,8 +34,8 @@ Route::namespace('App\Mobile\Controllers')->middleware(['jwt.auth', 'role:user|c
     Route::post('profile', 'ProfileController@update')->name('mobile.profile.update');
     Route::get('profile/{user}', 'ProfileController@show')->name('mobile.profile.show');
 
-    Route::post('reviews/{tour}', 'ReviewController@store')->name('mobile.reviews.store');
     Route::get('reviews/{tour}', 'ReviewController@index')->name('mobile.reviews');
+    Route::post('reviews/{tour}', 'ReviewController@store')->name('mobile.reviews.store');
     Route::delete('reviews/{tour}', 'ReviewController@destroy')->name('mobile.reviews.destroy');
 });
 
